--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,7 @@
 }
 
 body {
+  display: grid;
   background-color: rgb(60, 169, 241);
   font-family: sans-serif;
   font-size: 1.2em;
@@ -167,7 +168,6 @@ input[type="password"] {
   display: none;
   box-shadow: 4px 4px 8px greenyellow;
   width: 120px;
-
   border: none;
 }
 #seraQueSabesJog1,
@@ -178,7 +178,7 @@ input[type="password"] {
 }
 
 .erro {
-  width: 500px;
+  max-width: 100%;
   margin-bottom: 20px;
   color: red;
   font-weight: bold;
@@ -190,7 +190,7 @@ input[type="password"] {
 }
 .paragrafoErroTeste1,
 .paragrafoErroTeste2 {
-  width: 700px;
+  max-width: 100%;
   margin-bottom: 20px;
   color: red;
   font-weight: bold;
